--- a/index.html
+++ b/index.html
@@ -8,9 +8,24 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <!-- mine style.css -->
   <link rel="stylesheet" href="css/style.css">
-  <title>Document</title>
+  <title>Start bootstrao</title>
 </head>
 <body>
-  
+  <header>
+    <div></div>
+    <nav class="header-navbar"></nav>
+  </header>
+
+  <main>
+    <section class="jumbotron"></section>
+    <section class="portfolio"></section>
+    <section class="about"></section>
+    <section class="contact-me"></section>
+  </main>
+
+  <footer>
+    <nav class="footer-navbar"></nav>
+    <div></div>
+  </footer>
 </body>
 </html>
