--- a/index.html
+++ b/index.html
@@ -8,24 +8,42 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <!-- mine style.css -->
   <link rel="stylesheet" href="css/style.css">
-  <title>Start bootstrao</title>
+  <title>Start bootstrap</title>
 </head>
 <body>
-  <header>
-    <div></div>
-    <nav class="header-navbar"></nav>
+  <!-- header -->
+  <header class="container-fluid">
+    <div class="container">
+      <div class="row justify-content-lg-around align-content-center">
+        <div class="col-lg-3">
+          <div class="row">
+            <div class="blue-square-test"></div>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="row">
+              <div class="blue-square-test"></div>
+          </div>
+        </div>
+      </div>
+    </div>
   </header>
+  <!-- /header -->
 
+  <!-- main -->
   <main>
     <section class="jumbotron"></section>
     <section class="portfolio"></section>
     <section class="about"></section>
     <section class="contact-me"></section>
   </main>
+  <!-- /main -->
 
+  <!-- footer -->
   <footer>
     <nav class="footer-navbar"></nav>
     <div></div>
   </footer>
+  <!-- /footer -->
 </body>
 </html>
