--- a/index.html
+++ b/index.html
@@ -15,16 +15,8 @@
   <header class="container-fluid">
     <div class="container">
       <div class="row justify-content-lg-around align-content-center">
-        <div class="col-lg-3">
-          <div class="row">
-            <div class="blue-square-test"></div>
-          </div>
-        </div>
-        <div class="col-lg-3">
-          <div class="row">
-              <div class="blue-square-test"></div>
-          </div>
-        </div>
+        <div class="col-lg-3"></div>
+        <div class="col-lg-3"></div>
       </div>
     </div>
   </header>
