--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
 <body>
   <!-- header -->
   <header class="container-fluid">
-    <div class="container">
-      <div class="row justify-content-lg-around align-content-center">
-        <div class="col-lg-3"></div>
-        <div class="col-lg-3"></div>
-      </div>
+    <div class="row justify-content-lg-around align-content-center">
+      <div class="col-lg-2"></div>
+      <div class="col-lg-2"></div>
     </div>
   </header>
   <!-- /header -->
 
   <!-- main -->
   <main>
-    <section class="jumbotron"></section>
+    <section class="jumbotron">
+      <div class="container-sm">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ratione error dolore sequi, non dignissimos, porro autem quaerat deleniti vitae, velit nihil inventore! Suscipit, odit dolorum voluptatibus mollitia quis assumenda.
+      </div>
+    </section>
     <section class="portfolio"></section>
     <section class="about"></section>
     <section class="contact-me"></section>
