--- a/index.html
+++ b/index.html
@@ -24,11 +24,18 @@
   <main>
     <section class="jumbotron">
       <div class="container-sm">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ratione error dolore sequi, non dignissimos, porro autem quaerat deleniti vitae, velit nihil inventore! Suscipit, odit dolorum voluptatibus mollitia quis assumenda.
+        <div class="row justify-content-center">
+          <div class="col-6">
+            <div class="square-test"></div>
+          </div>
+        </div>
       </div>
     </section>
+
     <section class="portfolio"></section>
+
     <section class="about"></section>
+
     <section class="contact-me"></section>
   </main>
   <!-- /main -->
