--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
   <!-- header -->
   <header class="container-fluid">
-    <div class="row justify-content-lg-around align-content-center">
-      <div class="col-lg-2"></div>
-      <div class="col-lg-2"></div>
+    <div class="row justify-content-around align-content-center">
+      <div class="col-2"></div>
+      <div class="col-2"></div>
     </div>
   </header>
   <!-- /header -->
@@ -23,7 +23,7 @@
   <!-- main -->
   <main>
     <section class="jumbotron">
-      <div class="container-sm">
+      <div class="container">
         <div class="row justify-content-center">
           <div class="col-6">
             <div class="square-test"></div>
