--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
     <section class="jumbotron">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-6">
-            <div class="square-test"></div>
+          <div class="col-6 d-flex flex-column align-items-center m-5">
+            <div class="circle-red"></div>
+            <div class="fake-h1"></div>
+            <div class="fake-decoration"></div>
+            <div class="fake-p"></div>     
           </div>
         </div>
       </div>
