--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
   <!-- header -->
   <header class="container-fluid">
     <div class="row justify-content-around align-content-center">
-      <div class="col-2"></div>
-      <div class="col-2"></div>
+      <div class="col-2">
+        <div class="blue-header"></div>
+      </div>
+      <div class="col-2">
+        <div class="blue-header"></div>
+      </div>
     </div>
   </header>
   <!-- /header -->
@@ -25,7 +29,7 @@
     <section class="jumbotron">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-6 d-flex flex-column align-items-center m-5">
+          <div class="col-12 d-flex flex-column align-items-center m-5">
             <div class="circle-red"></div>
             <div class="fake-h1"></div>
             <div class="fake-decoration"></div>
@@ -35,7 +39,39 @@
       </div>
     </section>
 
-    <section class="portfolio"></section>
+    <section class="portfolio">
+      <div class="container">
+        <div class="row mb-5 mt-5">
+          <div class="col-12">
+            <div class="red"></div>
+            <div class="decoration"></div>
+          </div>
+        </div>
+        <div class="row mb-5">
+          <div class="col-4">
+            <div class="green"></div>
+          </div>
+          <div class="col-4">
+            <div class="black"></div>
+          </div>
+          <div class="col-4">
+            <div class="green"></div>
+          </div>
+        </div>
+        <div class="row mb-5">
+          <div class="col-4">
+            <div class="black"></div>
+          </div>
+          <div class="col-4">
+            <div class="green"></div>
+          </div>
+          <div class="col-4">
+            <div class="black"></div>
+          </div>
+        </div>
+      </div>
+
+    </section>
 
     <section class="about"></section>
 
