end about section

--- a/index.html
+++ b/index.html
@@ -73,7 +73,27 @@
 
     </section>
 
-    <section class="about"></section>
+    <section class="about">
+      <div class="container">
+        <div class="row pt-5">
+          <div class="col-12">
+            <div class="red"></div>
+            <div class="decoration"></div>
+          </div>
+        </div>
+        <div class="row justify-content-center mt-5">
+          <div class="col-5">
+            <div class="green"></div>
+          </div>
+          <div class="col-5">
+            <div class="black"></div>
+          </div>
+        </div>
+        <div class="row pb-5">
+          <div class="decoration"></div>
+        </div>
+      </div>
+    </section>
 
     <section class="contact-me"></section>
   </main>
