--- a/index.html
+++ b/index.html
@@ -95,7 +95,31 @@
       </div>
     </section>
 
-    <section class="contact-me"></section>
+    <section class="contact-me">
+      <div class="container pt-5">
+        <div class="row">
+          <div class="col-12">
+            <div class="red"></div>
+            <div class="decoration"></div>
+          </div>
+        </div>
+        <div class="row justify-content-center my-5">
+          <div class="col-10">
+            <div class="big-green">
+              <div class="name"></div>
+              <div class="email"></div>
+              <div class="number"></div>
+              <div class="mex"></div>        
+            </div>
+          </div>
+        </div>
+        <div class="row justify-content-center pb-5">
+          <div class="col-10">
+            <div class="small-black"></div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <!-- /main -->
 
