--- a/index.html
+++ b/index.html
@@ -125,8 +125,30 @@
 
   <!-- footer -->
   <footer>
-    <nav class="footer-navbar"></nav>
-    <div></div>
+    <div class="footer-navbar">
+      <div class="container">
+        <div class="row py-5">
+          <div class="col-4">
+            <div class="white"></div>
+          </div>
+          <div class="col-4">
+            <div class="white"></div>
+          </div>
+          <div class="col-4">
+            <div class="white"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="copyright">
+      <div class="container">
+        <div class="row py-5">
+          <div class="col-12">
+            <div class="end-footer"></div>
+          </div>
+        </div>
+      </div>
+    </div>
   </footer>
   <!-- /footer -->
 </body>
