--- a/index.html
+++ b/index.html
@@ -12,13 +12,22 @@
 </head>
 <body>
   <!-- header -->
-  <header class="container-fluid">
-    <div class="row justify-content-around align-content-center">
-      <div class="col-2">
-        <div class="blue-header"></div>
-      </div>
-      <div class="col-2">
-        <div class="blue-header"></div>
+  <header>
+    <div class="container">
+      <div class="row ">
+        <div class="col-6">
+          <div class="blue-header"></div>
+        </div>
+        <div class="col-6 text-end d-sm-none">
+          <i class="fas fa-bars"></i>
+        </div>
+        <div class="col-6 text-end d-none d-sm-block">
+          <ul class="nav-menu list-inline mb-0">
+            <li class="list-inline-item">link</li>
+            <li class="list-inline-item">link</li>
+            <li class="list-inline-item">link</li>
+          </ul>
+        </div>
       </div>
     </div>
   </header>
@@ -26,10 +35,10 @@
 
   <!-- main -->
   <main>
-    <section class="jumbotron">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-12 d-flex flex-column align-items-center m-5">
+    <section class="jumbotron text-center">
+      <div class="container pt-5 pb-5">
+        <div class="row text-center">
+          <div class="col-12">
             <div class="circle-red"></div>
             <div class="fake-h1"></div>
             <div class="fake-decoration"></div>
@@ -41,81 +50,56 @@
 
     <section class="portfolio">
       <div class="container">
-        <div class="row mb-5 mt-5">
-          <div class="col-12">
+        <div class="row pb-5 pt-5">
+          <div class="col-12 text-center">
             <div class="red"></div>
-            <div class="decoration"></div>
+            <div class="decoration mb-5"></div>
           </div>
-        </div>
-        <div class="row mb-5">
-          <div class="col-4">
+          <div class="col-12 col-sm-6 col-md-4 mb-3">
             <div class="green"></div>
           </div>
-          <div class="col-4">
+          <div class="col-12 col-sm-6 col-md-4 mb-3">
             <div class="black"></div>
           </div>
-          <div class="col-4">
+          <div class="col-12 col-sm-6 col-md-4 mb-3">
             <div class="green"></div>
           </div>
-        </div>
-        <div class="row mb-5">
-          <div class="col-4">
+          <div class="col-12 col-sm-6 col-md-4 mb-3">
             <div class="black"></div>
           </div>
-          <div class="col-4">
+          <div class="col-12 col-sm-6 col-md-4 mb-3">
             <div class="green"></div>
           </div>
-          <div class="col-4">
+          <div class="col-12 col-sm-6 col-md-4 mb-3">
             <div class="black"></div>
           </div>
         </div>
       </div>
-
     </section>
 
     <section class="about">
-      <div class="container">
-        <div class="row pt-5">
-          <div class="col-12">
-            <div class="red"></div>
-            <div class="decoration"></div>
+      <div class="container pt-5 pb-5">
+        <div class="row justify-content-center">
+          <div class="col-8">
+            <div class="row">
+              <div class="col-12 col-sm-6 mb-3">
+                <div class="green"></div>
+              </div>
+              <div class="col-12 col-sm-6">
+                <div class="black"></div>
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="row justify-content-center mt-5">
-          <div class="col-5">
-            <div class="green"></div>
-          </div>
-          <div class="col-5">
-            <div class="black"></div>
-          </div>
-        </div>
-        <div class="row pb-5">
-          <div class="decoration"></div>
         </div>
       </div>
     </section>
 
     <section class="contact-me">
-      <div class="container pt-5">
-        <div class="row">
-          <div class="col-12">
+      <div class="container pt-5 pb-5">
+        <div class="row justify-content-center">
+          <div class="col-8">
             <div class="red"></div>
             <div class="decoration"></div>
-          </div>
-        </div>
-        <div class="row justify-content-center my-5">
-          <div class="col-10">
-            <div class="big-green">
-              <div class="name"></div>
-              <div class="email"></div>
-              <div class="number"></div>
-              <div class="mex"></div>        
-            </div>
-          </div>
-        </div>
-        <div class="row justify-content-center pb-5">
-          <div class="col-10">
-            <div class="small-black"></div>
           </div>
         </div>
       </div>
@@ -125,27 +109,25 @@
 
   <!-- footer -->
   <footer>
-    <div class="footer-navbar">
+    <div class="footer-top">
       <div class="container">
-        <div class="row py-5">
-          <div class="col-4">
+        <div class="row">
+          <div class="col-12 col-md-4">
             <div class="white"></div>
           </div>
-          <div class="col-4">
+          <div class="col-12 col-md-4">
             <div class="white"></div>
           </div>
-          <div class="col-4">
+          <div class="col-12 col-md-4">
             <div class="white"></div>
           </div>
         </div>
       </div>
     </div>
-    <div class="copyright">
+    <div class="footer-bottom">
       <div class="container">
-        <div class="row py-5">
-          <div class="col-12">
-            <div class="end-footer"></div>
-          </div>
+        <div class="row">
+          <div class="col-12 text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. </div>
         </div>
       </div>
     </div>
