testing media header

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- font awesome cdn -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,700;0,900;1,300&display=swap" rel="stylesheet">
   <!-- bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <!-- mine style.css -->
@@ -14,18 +20,18 @@
   <!-- header -->
   <header>
     <div class="container">
-      <div class="row ">
+      <div class="row text-uppercase align-items-center py-3">
         <div class="col-6">
-          <div class="blue-header"></div>
+          <h1>Start bootstrap</h1>
         </div>
-        <div class="col-6 text-end d-sm-none">
+        <div class="col-6 text-end d-sm-none bar-icon">
           <i class="fas fa-bars"></i>
         </div>
         <div class="col-6 text-end d-none d-sm-block">
-          <ul class="nav-menu list-inline mb-0">
-            <li class="list-inline-item">link</li>
-            <li class="list-inline-item">link</li>
-            <li class="list-inline-item">link</li>
+          <ul class="nav-header list-inline mb-0 fw-bold">
+            <li class="list-inline-item"><a href="">Portfolio</a></li>
+            <li class="list-inline-item"><a href="">About</a></li>
+            <li class="list-inline-item"><a href="">Contact</a></li>
           </ul>
         </div>
       </div>
