--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <h1>Start bootstrap</h1>
         </div>
         <div class="col-6 text-end d-sm-none bar-icon">
-          <i class="fas fa-bars"></i>
+          <a href=""><i class="fas fa-bars"></i></a>
         </div>
         <div class="col-6 text-end d-none d-sm-block">
           <ul class="nav-header list-inline mb-0 fw-bold">
