--- a/index.html
+++ b/index.html
@@ -43,12 +43,18 @@
   <main>
     <section class="jumbotron text-center">
       <div class="container pt-5 pb-5">
-        <div class="row text-center">
+        <div class="row text-center text-uppercase">
           <div class="col-12">
-            <div class="circle-red"></div>
-            <div class="fake-h1"></div>
-            <div class="fake-decoration"></div>
-            <div class="fake-p"></div>     
+            <img src="img/avatar.svg" alt="avatar jumbo" class="avatar">
+            <h2 class="fw-600">Start bootstrap</h2>
+            <div class="star">
+              <i class="fas fa-star"></i>
+            </div>
+            <ul class="nav-jumbo list-inline mb-0 fw-bold">
+              <li class="list-inline-item">Graphic artist</li>
+              <li class="list-inline-item before-hr">Web designer</li>
+              <li class="list-inline-item before-hr">Illustrator</li>
+            </ul> 
           </div>
         </div>
       </div>
