end portfolio section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div class="col-12">
             <img src="img/avatar.svg" alt="avatar jumbo" class="avatar">
             <h2 class="fw-600">Start bootstrap</h2>
-            <div class="star">
+            <div class="star-white">
               <i class="fas fa-star"></i>
             </div>
             <ul class="nav-jumbo list-inline mb-0 fw-bold">
@@ -62,28 +62,30 @@
 
     <section class="portfolio">
       <div class="container">
-        <div class="row pb-5 pt-5">
+        <div class="row pb-5 pt-5 text-uppercase">
           <div class="col-12 text-center">
-            <div class="red"></div>
-            <div class="decoration mb-5"></div>
+            <h2 class="fw-600">Portfolio</h2>
+            <div class="star-black">
+              <i class="fas fa-star"></i>
+            </div>
           </div>
           <div class="col-12 col-sm-6 col-md-4 mb-3">
-            <div class="green"></div>
+            <img src="img/cabin.png" alt="casetta">
           </div>
           <div class="col-12 col-sm-6 col-md-4 mb-3">
-            <div class="black"></div>
+            <img src="img/cake.png" alt="torta">
           </div>
           <div class="col-12 col-sm-6 col-md-4 mb-3">
-            <div class="green"></div>
+            <img src="img/circus.png" alt="circo">
           </div>
           <div class="col-12 col-sm-6 col-md-4 mb-3">
-            <div class="black"></div>
+            <img src="img/game.png" alt="joystick">
           </div>
           <div class="col-12 col-sm-6 col-md-4 mb-3">
-            <div class="green"></div>
+            <img src="img/safe.png" alt="cassaforte">
           </div>
           <div class="col-12 col-sm-6 col-md-4 mb-3">
-            <div class="black"></div>
+            <img src="img/submarine.png" alt="sottomarino">
           </div>
         </div>
       </div>
