enmd about section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <!-- header -->
-  <header>
+  <header class="fixed-top">
     <div class="container">
       <div class="row text-uppercase align-items-center py-3">
         <div class="col-6">
@@ -69,22 +69,28 @@
               <i class="fas fa-star"></i>
             </div>
           </div>
-          <div class="col-12 col-sm-6 col-md-4 mb-3">
+          <div class="col-12 col-sm-6 col-md-4 mb-3 position-relative">
+            <i class="fas fa-plus position-absolute top-50 start-50 translate-middle "></i>
             <img src="img/cabin.png" alt="casetta">
           </div>
-          <div class="col-12 col-sm-6 col-md-4 mb-3">
+          <div class="col-12 col-sm-6 col-md-4 mb-3 position-relative">
+            <i class="fas fa-plus position-absolute top-50 start-50 translate-middle"></i>
             <img src="img/cake.png" alt="torta">
           </div>
-          <div class="col-12 col-sm-6 col-md-4 mb-3">
+          <div class="col-12 col-sm-6 col-md-4 mb-3 position-relative">
+            <i class="fas fa-plus position-absolute top-50 start-50 translate-middle"></i>
             <img src="img/circus.png" alt="circo">
           </div>
-          <div class="col-12 col-sm-6 col-md-4 mb-3">
+          <div class="col-12 col-sm-6 col-md-4 mb-3 position-relative">
+            <i class="fas fa-plus position-absolute top-50 start-50 translate-middle"></i>
             <img src="img/game.png" alt="joystick">
           </div>
-          <div class="col-12 col-sm-6 col-md-4 mb-3">
+          <div class="col-12 col-sm-6 col-md-4 mb-3 position-relative">
+            <i class="fas fa-plus position-absolute top-50 start-50 translate-middle"></i>
             <img src="img/safe.png" alt="cassaforte">
           </div>
-          <div class="col-12 col-sm-6 col-md-4 mb-3">
+          <div class="col-12 col-sm-6 col-md-4 mb-3 position-relative">
+            <i class="fas fa-plus position-absolute top-50 start-50 translate-middle"></i>
             <img src="img/submarine.png" alt="sottomarino">
           </div>
         </div>
@@ -93,14 +99,21 @@
 
     <section class="about">
       <div class="container pt-5 pb-5">
-        <div class="row justify-content-center">
+        <div class="row text-center justify-content-center">
           <div class="col-8">
-            <div class="row">
+            <h2 class="text-uppercase">About</h2>
+            <div class="star-white">
+              <i class="fas fa-star"></i>
+            </div>
+            <div class="row text-start mt-3">
               <div class="col-12 col-sm-6 mb-3">
-                <div class="green"></div>
+                <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis quos ullam corporis distinctio expedita, atque, suscipit </div>
               </div>
               <div class="col-12 col-sm-6">
-                <div class="black"></div>
+                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis commodi sunt iusto harum vel excepturi dolorum accusantium sint animi provident.</div> 
+              </div>
+              <div class="col-12 text-center mt-4">
+                <a type="" class="fake-btn"><span class="download"><i class="fas fa-download"></i></span> Download</a>
               </div>
             </div>
           </div>
