--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis commodi sunt iusto harum vel excepturi dolorum accusantium sint animi provident.</div> 
               </div>
               <div class="col-12 text-center mt-4">
-                <a type="" class="fake-btn"><span class="download"><i class="fas fa-download"></i></span> Download</a>
+                <a type="" class="fake-btn"><span class="download"><i class="fas fa-download"></i></span>Download</a>
               </div>
             </div>
           </div>
@@ -123,10 +123,31 @@
 
     <section class="contact-me">
       <div class="container pt-5 pb-5">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center text-center">
           <div class="col-8">
-            <div class="red"></div>
-            <div class="decoration"></div>
+            <h2 class="text-uppercase">Contact me</h2>
+            <div class="star-black">
+              <i class="fas fa-star"></i>
+            </div>
+            <div class="mb-1 text-start">
+              <label for="exampleFormControlInput1" class="form-label mb-0">Name</label>
+              <input type="email" class="form-control border-top-0 border-start-0 border-end-0" id="exampleFormControlInput1" placeholder="">
+            </div>
+            <div class="mb-1 text-start">
+              <label for="exampleFormControlInput1" class="form-label mb-0">Email Address</label>
+              <input type="email" class="form-control border-top-0 border-start-0 border-end-0" id="exampleFormControlInput1" placeholder="">
+            </div>
+            <div class="mb-1 text-start">
+              <label for="exampleFormControlInput1" class="form-label mb-0">Phone Number</label>
+              <input type="email" class="form-control border-top-0 border-start-0 border-end-0" id="exampleFormControlInput1" placeholder="">
+            </div>
+            <div class="mb-3 text-start">
+              <label for="exampleFormControlTextarea1" class="form-label mb-0">Message</label>
+              <textarea class="form-control border-top-0 border-start-0 border-end-0" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+            <div class="text-start">
+              <a type="" class="fake-btn-end">Send</a>
+            </div>
           </div>
         </div>
       </div>
