end base structure

--- a/index.html
+++ b/index.html
@@ -160,14 +160,25 @@
     <div class="footer-top">
       <div class="container">
         <div class="row">
-          <div class="col-12 col-md-4">
-            <div class="white"></div>
+          <div class="col-12 col-md-4 text-center my-5">
+            <h2 class="text-uppercase fw-normal fs-5">Location</h2>
+            <p class="mb-0">2215 John Daniel Drive Clark, MO</p>
+            <span>54243</span>
           </div>
-          <div class="col-12 col-md-4">
-            <div class="white"></div>
+          <div class="col-12 col-md-4 text-center my-5">
+            <h2 class="text-uppercase fw-normal fs-5">Around the web</h2>
+            <div>
+              <ul class="nav-footer list-inline mb-0 fw-bold">
+                <li class="list-inline-item"><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                <li class="list-inline-item"><a href=""><i class="fab fa-google-plus-g"></i></a></li>
+                <li class="list-inline-item"><a href=""><i class="fab fa-twitter"></i></a></li>
+                <li class="list-inline-item"><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+              </ul>
+            </div>
           </div>
-          <div class="col-12 col-md-4">
-            <div class="white"></div>
+          <div class="col-12 col-md-4 text-center my-5">
+            <h2 class="text-uppercase fw-normal fs-5">About freelancer</h2>
+            <p>Freelance is a free to use, open source Bootstrap theme created by <span class="green-text">Start Bootstrap</span></p>
           </div>
         </div>
       </div>
@@ -175,7 +186,9 @@
     <div class="footer-bottom">
       <div class="container">
         <div class="row">
-          <div class="col-12 text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. </div>
+          <div class="col-12 text-center my-4">
+            <p>Copyright<span class="mx-1"><i class="far fa-copyright"></i></span>Your Website 2019</p>
+          </div>
         </div>
       </div>
     </div>
